--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@ nav-new.html
 nav-old.html
 template.html
 events-old.html
+responsive-topnav-with-dropdown.html
+services.html
+index-copy.html
+design.html
